examples/test/testpolicy10305.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10305
  namespace: namespace291
spec:
  podSelector:
    matchLabels:
      key48: value42
      key44: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value44
          key36: value33
          key4: value14
      podSelector:
        matchLabels:
          key37: value3
          key5: value46
